--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.aspectj:aspectjrt:1.9.21'
     implementation 'org.aspectj:aspectjweaver:1.9.21'
     implementation 'org.springframework:spring-aop:6.1.6'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
 }
 
